# app/Http/Requests/StoreMovementRequest.php
@@ -4,9 +4,9 @@ namespace App\Http\Requests;
 
 /**
  * @OA\Schema(
- *     schema="StoreReceivableMovementRequest",
- *     title="StoreReceivableMovementRequest",
- *     description="Store Receivable Movement Request",
+ *     schema="StorePayableMovementRequest",
+ *     title="StorePayableMovementRequest",
+ *     description="Store Payable Movement Request",
  *     type="object",
  *     @OA\Property( property="paymentDate", type="date", example="2021-10-13"),
  *     @OA\Property( property="cash", type="numeric", example="100.00"),
@@ -17,8 +17,25 @@ namespace App\Http\Requests;
  *     @OA\Property( property="isBankPayment", type="boolean", example="true"),
  *     @OA\Property( property="comment", type="string", example="Comment"),
  *     @OA\Property( property="bank_id", type="integer", example="1"),
- *     @OA\Property( property="accountReceivable_id", type="integer", example="1"),
+ *     @OA\Property( property="accountPayable_id", type="integer", example="1"),
  * )
+ *
+ * @OA\Schema(
+ *      schema="StoreReceivableMovementRequest",
+ *      title="StoreReceivableMovementRequest",
+ *      description="Store Receivable Movement Request",
+ *      type="object",
+ *      @OA\Property( property="paymentDate", type="date", example="2021-10-13"),
+ *      @OA\Property( property="cash", type="numeric", example="100.00"),
+ *      @OA\Property( property="yape", type="numeric", example="100.00"),
+ *      @OA\Property( property="plin", type="numeric", example="100.00"),
+ *      @OA\Property( property="card", type="numeric", example="100.00"),
+ *      @OA\Property( property="deposit", type="numeric", example="100.00"),
+ *      @OA\Property( property="isBankPayment", type="boolean", example="true"),
+ *      @OA\Property( property="comment", type="string", example="Comment"),
+ *      @OA\Property( property="bank_id", type="integer", example="1"),
+ *      @OA\Property( property="accountReceivable_id", type="integer", example="1"),
+ *  )
  */
 class StoreMovementRequest extends StoreRequest
 {
